fix-bg-color-catalog-wrap-d

--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -155,6 +155,9 @@
   .flip-card:hover .flip-card-inner {
     transform: none;
   }
+  .catalog-wrap {
+    background-color: var(--color-white);
+  }
   .catalog-title {
     margin-bottom: 64px;
   }
